src/test/ui/unboxed-closure-sugar-wrong-trait.stderr
error[E0244]: wrong number of type arguments: expected 0, found 1
  --> $DIR/unboxed-closure-sugar-wrong-trait.rs:15:8
   |
15 | fn f<F:Trait(isize) -> isize>(x: F) {}
   |        ^^^^^^^^^^^^^^^^^^^^^ expected no type arguments

error[E0220]: associated type `Output` not found for `Trait`
  --> $DIR/unboxed-closure-sugar-wrong-trait.rs:15:24
   |
15 | fn f<F:Trait(isize) -> isize>(x: F) {}
   |                        ^^^^^ associated type `Output` not found

error: aborting due to 2 previous errors

